--- a/src/AdminWebMailBundle/Resources/views/base.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>
-        {% block title %}Welcome!{% endblock %}
+        {% block title %}Admin webmail pannel{% endblock %}
     </title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('/css/bootstrap.min.css') }}">
