Added domain editor

--- a/src/AdminWebMailBundle/Resources/views/index.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/index.html.twig
@@ -2,8 +2,13 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    <!--Basic Table-->
     <link rel="stylesheet" href="{{ asset('/css/bootstrap-table.min.css') }}">
+    <!--Editable POPUP-->
     <link rel="stylesheet" href="{{ asset('/css/bootstrap-editable.css') }}">
+    <!--Editable ROW-->
+    <link rel="stylesheet" href="{{ asset('/css/bootstrap-editable.css') }}">
+
 {% endblock %}
 
 {% block body %}
@@ -32,51 +37,68 @@
 
 {% block javascripts %}
     {{ parent() }}
+    <!--Basic Table-->
     <script src="{{ asset('/js/bootstrap-table.min.js') }}"></script>
     <script src="{{ asset('/locale/bootstrap-table-es-ES.js') }}"></script>
+    <!--Editable POPUP-->
     <script src="{{ asset('/js/bootstrap-table-editable.js') }}"></script>
     <script src="{{ asset('/js/bootstrap-editable.js') }}"></script>
 
+
     <script>
-        var $table = $('#table'),
-                $remove = $('#remove'),
-                selections = [];
+        $(document).ready(function () {
 
-        $('#table').bootstrapTable({
-            columns: [{
-                field: 'id',
-                title: 'ID',
-                sortable: true,
-                align: 'center'
-            }, {
-                field: 'email',
-                title: 'Email',
-                sortable: true,
-                editable: {
-                    type: 'text',
-                    title: 'Email Address',
-                    validate: function (value) {
-                        value = $.trim(value);
-                        if (!value) {
-                            return 'This field is required';
-                        }
-                        if (!/[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/.test(value)) {
-                            return 'Enter valid mail address'
-                        }
-                        var data = $table.bootstrapTable('getData'),
-                                index = $(this).parents('tr').data('index');
-                        console.log(data[index]);
-                        return '';
-                    }
-                },
-                align: 'center'
+            var $table = $('#table'), $remove = $('#remove'), selections = [];
 
-            }, {
-                field: 'domain',
-                title: 'Domain',
-                sortable: true,
-                align: 'center'
-            },]
+            $('#table').bootstrapTable({
+                columns: [{
+                    field: 'id',
+                    title: 'ID',
+                    sortable: true,
+                    align: 'center',
+                    visible: false
+                }, {
+                    field: 'email',
+                    title: 'Email',
+                    sortable: true,
+                    editable: {
+                        type: 'text',
+                        title: 'Email Address',
+                        validate: function (value) {
+                            value = $.trim(value);
+                            if (!value) {
+                                return 'This field is required';
+                            }
+                            if (!/[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/.test(value)) {
+                                return 'Enter valid mail address'
+                            }
+                            $table.bootstrapTable('showLoading');
+                            var data = $table.bootstrapTable('getData'), index = $(this).parents('tr').data('index');
+                            console.log(data[index]);
+                            console.log("Added: " + value);
+                            $table.bootstrapTable('hideLoading');
+                            return 'A';
+                        }
+                    },
+                    align: 'center'
+
+                }, {
+                    field: 'domain',
+                    title: 'Domain',
+                    sortable: true,
+                    editable: {
+                        type: 'select',
+                        title: 'Email Address',
+                        source: '{{(domains|json_encode|raw)}}',
+                        validate: function (value) {
+                            console.log("Value inserted: " + value);
+                            return '';
+                        }
+                    },
+                    align: 'center'
+                },]
+            });
+
         });
     </script>
 {% endblock %}
