Added domain editor

--- a/src/AdminWebMailBundle/Resources/views/base.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/base.html.twig
@@ -24,8 +24,8 @@
 </div>
 
 {% block javascripts %}
-    <script src="{{ asset('/js/jquery-3.2.0.min.js') }}"></script>
-    <script src="{{ asset('/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/jquery-3.2.0.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/bootstrap.min.js') }}"></script>
 {% endblock %}
 </body>
 </html>
