--- a/src/AdminWebMailBundle/Resources/views/index.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/index.html.twig
@@ -141,8 +141,8 @@
                             if (!value) {
                                 return 'This field is required';
                             }
-                            if (!checkDomain(value)) {
-                                return 'Enter valid mail address'
+                            if ((error = checkDomain(value)) != "true") {
+                                return error;
                             }
                             $table.bootstrapTable('showLoading');
                             var data = $table.bootstrapTable('getData'), index = $(this).parents('tr').data('index');
@@ -185,16 +185,32 @@
                 }
             });
 
+
+
+            //Check domain
             function checkDomain(mail) {
                 var validMail = new RegExp(/[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/);
-                for (var i = 0, len = $domains.length; i < len; i++) {
-                    if ((new RegExp('(@' + $domains[i]["text"] + ')$').test(mail)) && ((validMail.test(mail)))) {
-                        return true;
+                var find2At = new RegExp(/(@.*){2,}/);
+                // Find if mail have two @
+                if (!find2At.test(mail)) {
+                    // Find if mail is correctly
+                    if (validMail.test(mail)) {
+                        //Find if domain is in text
+                        for (var i = 0, len = $domains.length; i < len; i++) {
+                            if (new RegExp('(@' + $domains[i]["text"] + ')$').test(mail)) {
+                                return "true";
+                            }
+                        }
+                    } else {
+                        return "Insert correctly mail address";
                     }
+                } else {
+                     return "Error: two @ is not valid";
                 }
-                return false;
-            }
 
+                // Not domains found
+                return "Not valid domain entered";
+            }
         });
 
     </script>
