--- a/src/AdminWebMailBundle/Resources/views/index.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/index.html.twig
@@ -7,6 +7,22 @@
     <!--Editable POPUP-->
     <link rel="stylesheet" href="{{ asset('/css/bootstrap-editable.css') }}">
 
+    <style>
+        /* Tooltip */
+        .tooltip > .tooltip-inner {
+            background-color: #f2dede;
+            color: #a94442;
+            border: 1px solid #ebccd1;
+            padding: 10px;
+            font-size: 15px;
+        }
+
+        /* Tooltip on top */
+        .tooltip.top > .tooltip-arrow {
+            border-top: 5px solid #ebccd1;
+        }
+
+    </style>
 {% endblock %}
 
 {% block body %}
@@ -14,7 +30,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div id="toolbar" disabled="disabled">
-                <button id="addMailBtn" class="btn btn-success">Add Mail</button>
+                <button class="btn btn-success" data-toggle="modal" data-target="#addMailModal">Add Mail</button>
             </div>
             <table id="table"
                    data-toolbar="#toolbar"
@@ -55,14 +71,18 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <form>
-                                <div class="form-group">
+                                <div class="form-group" id="newEmailTextGroup">
                                     <label for="exampleInputEmail1">Email address</label>
 
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                                         <input id="newEmailText" type="email" class="form-control" placeholder="Email">
+                                        <span class="glyphicon glyphicon-remove form-control-feedback"></span>
                                     </div>
+                                    <label class="control-label" for="inputError">Input with error and glyphicon</label>
                                 </div>
+
+
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">Password</label>
 
@@ -94,8 +114,15 @@
 
         </div>
     </div>
+    <div class="control-group error">
+        <label class="control-label" for="inputError">Input with error</label>
 
-
+        <div class="controls">
+            <input type="text" id="inputError">
+            <span class="help-inline">Please correct the error</span>
+        </div>
+    </div>
+    <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on left">Tooltip on left</button>
     <!--!End Modals-->
 {% endblock %}
 
@@ -118,6 +145,10 @@
     <script type="text/javascript" src="{{ asset('/js/bootstrap-table-export.js') }}"></script>
 
     <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
         $(document).ready(function () {
             var $domains = JSON.parse('{{(domains|json_encode|raw)}}');
 
@@ -168,24 +199,18 @@
                         }
                     },
                     align: 'center'
-                },]
+                }]
             });
-
-
-            $("#addMailBtn").click(function () {
-                $('#addMailModal').modal('show');
-            });
-
 
             $("#createMailBtn").click(function () {
-                if (checkDomain($("#newEmailText").val())) {
-                    console.log("hoHead");
+                if ((error = checkDomain($("#newEmailText").val())) == "true") {
+                    $("#newEmailTextGroup").removeClass("has-error");
+                    return true;
                 } else {
-                    console.log("Error");
+                    $("#newEmailTextGroup").addClass("has-error");
+                    notification(error, "danger", 5000);
                 }
             });
-
-
 
             //Check domain
             function checkDomain(mail) {
@@ -205,7 +230,7 @@
                         return "Insert correctly mail address";
                     }
                 } else {
-                     return "Error: two @ is not valid";
+                    return "Error: two @ is not valid";
                 }
 
                 // Not domains found
