Changes on view

--- a/src/AdminWebMailBundle/Resources/views/users.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/users.html.twig
@@ -71,32 +71,33 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <form>
+
                                 <div class="form-group" id="newEmailTextGroup">
-                                    <label for="exampleInputEmail1">Email address</label>
+                                    <label class="control-label" for="newEmailText">Email address</label>
 
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                        <input id="newEmailText" type="email" class="form-control" placeholder="Email">
-                                        <span class="glyphicon glyphicon-remove form-control-feedback"></span>
-                                    </div>
-                                    <label class="control-label" for="inputError">Input with error and glyphicon</label>
-                                </div>
-
-
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Password</label>
-
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                        <input id="newPasswordText1" type="password" class="form-control" placeholder="Email">
+                                        <input id="newEmailText" type="email" class="form-control modal-text" placeholder="Email">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Repeat Password</label>
 
-                                    <div class="input-group">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                        <input id="newPasswordText2" type="password" class="form-control" placeholder="Email">
+                                <div>
+                                    <div class="form-group" id="newPasswordTextGroup1">
+                                        <label class="control-label" for="newPasswordText1">Password</label>
+
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                            <input id="newPasswordText1" type="password" class="form-control modal-text" placeholder="Email">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group" id="newPasswordTextGroup2">
+                                        <label class="control-label" for="newPasswordText2">Repeat Password</label>
+
+                                        <div class="input-group">
+                                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                            <input id="newPasswordText2" type="password" class="form-control modal-text" placeholder="Email">
+                                        </div>
                                     </div>
                                 </div>
 
@@ -129,21 +130,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <!--Basic Table-->
-    <script type="text/javascript" src="{{ asset('/js/bootstrap-table.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/locale/bootstrap-table-es-ES.js') }}"></script>
-    <!--Editable POPUP-->
-    <script type="text/javascript" src="{{ asset('/js/bootstrap-table-editable.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/js/bootstrap-editable.js') }}"></script>
-    <!--Export-->
-    <script type="text/javascript" src="{{ asset('/libs/FileSaver/FileSaver.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/libs/js-xlsx/xlsx.core.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/libs/jsPDF/jspdf.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/libs/html2canvas/html2canvas.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/js/tableExport.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/js/bootstrap-table-export.js') }}"></script>
-
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
@@ -202,15 +188,63 @@
                 }]
             });
 
+
+            /*
+             * Modal checks
+             */
+
+            var errorGlyphicon = '<span class="glyphicon glyphicon-remove form-control-feedback error-label"></span>';
+
             $("#createMailBtn").click(function () {
-                if ((error = checkDomain($("#newEmailText").val())) == "true") {
-                    $("#newEmailTextGroup").removeClass("has-error");
-                    return true;
-                } else {
-                    $("#newEmailTextGroup").addClass("has-error");
-                    notification(error, "danger", 5000);
+                if (checkEmail() && checkRepeatPassword()) {
+                    notify("AllOK");
                 }
             });
+
+            $(".modal-text").focus(function () {
+                $(this).parent().parent().removeClass("has-error has-success");
+            });
+
+            $("#newEmailText").blur(function () {
+                checkEmail();
+            });
+
+            function checkEmail() {
+                $("#newEmailTextGroup").find(".error-label").remove();
+                if ((error = checkDomain($("#newEmailText").val())) == "true") {
+                    $("#newEmailTextGroup").addClass("has-success");
+                    return true;
+                } else {
+                    var labelError = '<label class="control-label error-label" for="newEmailText">' + error + '</label>'
+                    $("#newEmailTextGroup").append(labelError);
+                    $("#newEmailTextGroup").addClass("has-error");
+                    $("#newEmailText").after(errorGlyphicon);
+                    return false;
+                }
+            }
+
+            $("#newPasswordText2").blur(function () {
+                checkRepeatPassword();
+            });
+            $("#newPasswordText1").blur(function () {
+                checkRepeatPassword();
+            });
+
+            function checkRepeatPassword() {
+                $("#newPasswordTextGroup1").parent().find(".error-label").remove();
+                if ($("#newPasswordText1").val() == $("#newPasswordText2").val() && $("#newPasswordText1").val() != "") {
+                    $("#newPasswordTextGroup1").addClass("has-success");
+                    $("#newPasswordTextGroup2").addClass("has-success");
+                } else {
+                    var labelError = '<label class="control-label error-label" for="newEmailText">Not is the same password!</label>'
+                    $("#newPasswordTextGroup1").addClass("has-error");
+                    $("#newPasswordTextGroup2").addClass("has-error");
+                    $("#newPasswordText1").after(errorGlyphicon);
+                    $("#newPasswordText2").after(errorGlyphicon);
+                    $("#newPasswordTextGroup2").append(labelError);
+                }
+            }
+
 
             //Check domain
             function checkDomain(mail) {
