--- a/src/AdminWebMailBundle/Resources/views/base.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/base.html.twig
@@ -34,11 +34,28 @@
     <!--Notifications-->
     <script type="text/javascript" src="{{ asset('/js/bootstrap-notify.js') }}"></script>
 
+    <!--Basic Table-->
+    <script type="text/javascript" src="{{ asset('/js/bootstrap-table.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/locale/bootstrap-table-es-ES.js') }}"></script>
+
+    <!--Editable POPUP-->
+    <script type="text/javascript" src="{{ asset('/js/bootstrap-table-editable.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/bootstrap-editable.js') }}"></script>
+
+    <!--Export-->
+    <script type="text/javascript" src="{{ asset('/libs/FileSaver/FileSaver.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/libs/js-xlsx/xlsx.core.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/libs/jsPDF/jspdf.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/libs/html2canvas/html2canvas.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/tableExport.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/bootstrap-table-export.js') }}"></script>
+
     <!--Notifications public function-->
     <script>
-        var notification = {};
+        var notify = {};
         $(document).ready(function () {
-            notification = function (message, type = "info", timer = 2000) {
+            notify = function (message, type = "info", timer = 2000) {
                 $.notifyClose();
                 $.notify({
                     message: message
