--- a/src/AdminWebMailBundle/Resources/views/base.html.twig
+++ b/src/AdminWebMailBundle/Resources/views/base.html.twig
@@ -11,6 +11,13 @@
         <!--<link rel="stylesheet" href="{{ asset('/css/bootstrap-theme.min.css') }}">-->
         <!--Animated CSS for Notifications-->
         <link rel="stylesheet" href="{{ asset('/css/animate.css') }}">
+
+        <!--Basic Table-->
+        <link rel="stylesheet" href="{{ asset('/css/bootstrap-table.min.css') }}">
+
+        <!--Editable POPUP-->
+        <link rel="stylesheet" href="{{ asset('/css/bootstrap-editable.css') }}">
+
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
 </head>
